--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,19 +18,19 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-         dotnet-version: 3.0.x
+         dotnet-version: 3.1.x
       - name: Build
         run: dotnet publish PapyrusCs -c Release --self-contained --runtime win-x64
         
       - uses: vimtor/action-zip@v1
         with:
           files: build/
-          dest: PapyrusCs - ${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
+          dest: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
       - name: Upload .zip as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: PapyrusCs - ${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
-          path: PapyrusCs - ${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
+          name: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
+          path: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
           if-no-files-found: error
         
       - name: Calculate build number
@@ -45,7 +45,7 @@ jobs:
         with:
           artifacts: ""
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.build-number.outputs.BUILD_NUMBER }}
+          tag: 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}
           name: PapyrusCs - ${{ steps.build-number.outputs.BUILD_NUMBER }}
           prerelease: true
 
