--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
         
       - uses: vimtor/action-zip@v1
         with:
-          files: build/
+          files: /home/runner/work/papyruscs/papyruscs/PapyrusCs/bin/Release/netcoreapp3.1/win-x64/publish/
           dest: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
       - name: Upload .zip as artifact
         uses: actions/upload-artifact@v2
