--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,40 +12,39 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.1
         with:
            access_token: ${{ github.token }}
-        
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-         dotnet-version: 3.1.x
-      - name: Build
-        run: dotnet publish PapyrusCs -c Release --self-contained --runtime win-x64
-        
-      - uses: vimtor/action-zip@v1
-        with:
-          files: /home/runner/work/papyruscs/papyruscs/PapyrusCs/bin/Release/netcoreapp3.1/win-x64/publish/
-          dest: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
-      - name: Upload .zip as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
-          path: PapyrusCs - 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}.zip
-          if-no-files-found: error
-        
       - name: Calculate build number
         id: build-number
         run: |
           BUILD_NUMBER=$(($GITHUB_RUN_NUMBER)) #to stay above jenkins
           echo "Build number: $BUILD_NUMBER"
           echo ::set-output name=BUILD_NUMBER::$BUILD_NUMBER
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+         dotnet-version: 3.1.x
+         
+      - name: Build
+        run: dotnet publish PapyrusCs -c Release --self-contained --runtime win-x64
+        
+      - uses: vimtor/action-zip@v1
+        with:
+          files: /home/runner/work/papyruscs/papyruscs/PapyrusCs/bin/Release/netcoreapp3.1/win-x64/publish/
+          dest: papyruscs-dotnetcore-0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}-win64.zip
+      - name: Upload .zip as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: papyruscs-dotnetcore-0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}-win64.zip
+          path: papyruscs-dotnetcore-0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}-win64.zip
+          if-no-files-found: error
           
       - name: Puts the release on GitHub
         uses: ncipollo/release-action@v1
         with:
           artifacts: ""
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: 0.0.${{ steps.build-number.outputs.BUILD_NUMBER }}
-          name: PapyrusCs - ${{ steps.build-number.outputs.BUILD_NUMBER }}
+          tag: 0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}
+          name: PapyrusCs - 0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}
           prerelease: true
 
