--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Puts the release on GitHub
         uses: ncipollo/release-action@v1
         with:
-          artifacts: ""
+          artifacts: "papyruscs-dotnetcore-0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}-win64.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: 0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}
           name: PapyrusCs - 0.6.${{ steps.build-number.outputs.BUILD_NUMBER }}
